--- a/css/style.css
+++ b/css/style.css
@@ -7922,3 +7922,22 @@ Custom Css
 .pq-footer-top{
   padding: 50px 100px 0 100px !important;
 }
+
+
+
+
+/* added */
+
+.surgery-box {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 15px;
+  margin: 10px;
+}
+
+.surgery-box img {
+  width: 100%;
+  border-radius: 10px;
+}
