--- a/css/style.css
+++ b/css/style.css
@@ -2892,15 +2892,17 @@ footer#pq-footer .pq-footer-style-1 ul li a {
 
 
 footer#pq-footer .pq-footer-style-1 .pq-footer-social ul li a {
-  border-radius: 3px;
-  background: rgba(255, 255, 255, 0.1);
-  color: var(--white-color);
+  /* border-radius: 3px; */
+  /* background: rgba(255, 255, 255, 0.1); */
+  /* color: var(--white-color); */
   width: 50px;
   height: 50px;
   line-height: 50px;
   text-align: center;
-  display: inline-block;
+  display: flex
+;
   padding: 0;
+  align-items: center;
 }
 
 footer#pq-footer .pq-footer-style-1 .pq-footer-social ul li a:hover {
@@ -7208,8 +7210,8 @@ Custom Css
 }
 
 .pq-home2-about {
-  padding-top: 370px !important;
-  padding-bottom: 130px;
+  padding-top: 80px !important;
+  padding-bottom: 50px;
 }
 
 .pq-skill-pb-130 {
