--- a/storage/css/style.css
+++ b/storage/css/style.css
@@ -66,7 +66,7 @@ NOTE: This is main stylesheet of template, This file contains the styling for th
 [ Moz Selection ]
 ==================================================*/
 :root {
-  --primary-color: #2490eb;
+  --primary-color: #4C906F;
   --primary-dark-color: #14457b;
   --dark-color: #18100f;
   --secondary-color: #666666;
@@ -7151,7 +7151,7 @@ rev-slider
 #rev_slider_25_1_wrapper .hesperiden .tp-bullet.selected,
 #rev_slider_29_1_wrapper .hesperiden .tp-bullet.rs-touchhover,
 #rev_slider_29_1_wrapper .hesperiden .tp-bullet.selected/ {
-  background: #2490eb;
+  background: #4C906F;
 }
 
 
