--- a/css/style.css
+++ b/css/style.css
@@ -3059,7 +3059,7 @@ Section Title
   position: relative;
   text-transform: uppercase;
   color: var(--primary-color);
-  background: #d3e9fb;
+  /* background: #d3e9fb; */
   padding: 4px 8px;
   margin: 0 0 10px;
   display: inline-block;
@@ -3098,7 +3098,7 @@ Section Title
   position: relative;
   text-transform: uppercase;
   color: var(--primary-color);
-  background: #d3e9fb;
+  /* background: #d3e9fb; */
   padding: 4px 8px;
   margin: 0 0 10px;
   display: inline-block;
